# uv-starter

./: README.md  copier.yaml
{{ project_name }}/: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
{{ project_name }}/.codex/: settings.json
{{ project_name }}/.codex/commands/: check.md  commit.md  review.md  test.md
{{ project_name }}/.codex/skills/quality-check/: SKILL.md
{{ project_name }}/src/{{ project_name }}/: hello.py
{{ project_name }}/tests/: test_hello.py
