[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ project_name }}/"]

[project]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">={{ python_version }}"
dependencies = []

[project.scripts]
hello = "{{ project_name }}.hello:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.ruff]
target-version = "py{{ python_version | replace('.', '') }}"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ty.rules]

[tool.coverage.run]
source = ["src/{{ project_name }}"]

[tool.coverage.report]
show_missing = true
